Rename alumni btn class and take into account visited links. Adjust featured class on archive to ensure consistent spacing for entries.

--- a/wp-content/themes/nuclearnetwork/sass/pages/_alumni.scss
+++ b/wp-content/themes/nuclearnetwork/sass/pages/_alumni.scss
@@ -12,8 +12,12 @@
 		margin-left: 0 !important;
 	}
 }
-.alumni .btn {
+.alumni-btn {
 	color: $white;
 	margin: 1rem 0 -0.5rem;
 	display: inline-block;
+
+	&:visited {
+		color: $white;
+	}
 }
