--- a/wp-content/themes/nuclearnetwork/sass/pages/_posts.scss
+++ b/wp-content/themes/nuclearnetwork/sass/pages/_posts.scss
@@ -138,7 +138,7 @@
   }
 
   // Featured Posts
-  &.featured:not(.announcements) {
+  &.featured:not(.announcements):not(.alumni) {
 
     .entry-header {
       @include breakpoint("medium") {
